2007-03-04  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Split where in bindir and libdir.

	* ocamlbuild_where.mli: Ditto.
	* ocaml_specific.ml: Update.
	* options.ml: Use bindir.
	* plugin.ml: Update.
	* start.sh: Update.

2007-03-04  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Virtual solvers for ocaml tools.

	* options.ml: Setup virtual command solver for commands like ocamlc,
	ocamlopt... This allow to have full pathname but let also failback to
	classic search path.
	* ocaml_compiler.ml: Add a tag to differentiate dependencies at link
	time.
	* ocamlbuild-presentation.rslide: Add an item as suggested by a friend.

2007-03-02  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Same thing for the second link function.

	* ocaml_compiler.ml: Ignore stdlib.

2007-03-02  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Move the stdlib hack.

	* ocaml_compiler.ml: Should works better.

2007-03-02  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Little fix about library linking.

	* ocaml_utils.ml: Avoid linking twice in some cases.
	* ocaml_compiler.ml: Handle specially the OCaml stdlib.

2007-03-01  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Remove a rec.

	* glob.ml: Parse is not rec.

2007-03-01  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	true: traverse and FAQ.

	* main.ml: Move the inital config upper to be loaded before the others
	and hygiene.
	* FAQ: New.

2007-02-28  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Improve the glob dir handling.

	* glob.ml: Extend the ast instead of parsing an extended string.

2007-02-28  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Ensure that the whole boolean expression is only valid in the directory.

	* glob.ml: Ditto.

2007-02-28  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Put -g on link only for programs.

	* ocaml_specific.ml: Ditto.

2007-02-26  Berke Durak  <berke.durak@inria.fr>

	Added disclaimer to default rules table.

	* manual/manual.tex: .
